tests/positive/pr115_case_terminator.safe
package PR115_Case_Terminator

   type Switch is range 0 to 1;

   function Normalize (Input : Switch) returns Boolean

      var Result : Boolean = False
      case Input
         when 0
            Result = False;

         when others
            Result = True;


      return Result



